--- a/content/nomad/v1.11.x/content/docs/faq.mdx
+++ b/content/nomad/v1.11.x/content/docs/faq.mdx
@@ -3,7 +3,7 @@ layout: docs
 page_title: Frequently Asked Questions
 description: Nomad frequently asked question topics include checkpoint, gossip and consensus protocols, Nomad datacenter versus Consul datacenter, bootstrapping a cluster, and connecting to a host network with Docker Desktop.
 ---
-
+DELETE THIS PR
 # Frequently Asked Questions
 
 ## Q: What is Checkpoint? / Does Nomad call home?
