--- a/content/consul/v1.22.x/content/docs/glossary.mdx
+++ b/content/consul/v1.22.x/content/docs/glossary.mdx
@@ -5,7 +5,7 @@ description: >-
   The glossary is a list of technical terms with a specific meaning in Consul. Use the glossary to understand Consul concepts and study for the certification exam.
 ---
 
-# Glossary
+# Consul glossary
 
 This page defines terms used in Consul and provides links to its supporting documentation.
 
