--- a/content/nomad/v1.11.x/content/docs/index.mdx
+++ b/content/nomad/v1.11.x/content/docs/index.mdx
@@ -15,7 +15,7 @@ applications.
 If you are just getting started with Nomad, refer to the [Getting
 Started tutorial collection][gs].
 
-~> Interested in talking with HashiCorp about your experience building, deploying,
+Interested in talking with HashiCorp about your experience building, deploying,
 or managing your applications? [Set up a time to chat!](https://forms.gle/2tAmxJbyPbcL2nRW9)
 
 [gs]: /nomad/tutorials/get-started
