--- a/content/boundary/v0.20.x/content/docs/what-is-boundary.mdx
+++ b/content/boundary/v0.20.x/content/docs/what-is-boundary.mdx
@@ -7,7 +7,8 @@ description: >-
 
 # What is Boundary?
 
-HashiCorp Boundary is an identity-aware proxy aimed at simplifying and securing least-privileged access to cloud infrastructure
+HashiCorp Boundary is an identity-aware proxy aimed at simplifying and securing
+least-privileged access to cloud infrastructure
 
 With Boundary you can:
 - Enable single sign-on to target services and applications via external identity providers
