--- a/content/hcp-docs/content/docs/cli/index.mdx
+++ b/content/hcp-docs/content/docs/cli/index.mdx
@@ -10,7 +10,8 @@ description: |-
 
 ## Installation
 
-Refer to the [installation guide](/hcp/docs/cli/install) for instructions on installing the HCP CLI.
+Refer to the [installation guide](/hcp/docs/cli/install) for instructions on
+installing the HCP CLI.
 
 ## Getting started
 
@@ -24,16 +25,20 @@ This will open a browser to allow you to interactively login. For other ways to
 login, refer to the [`hcp auth login` command
 reference](/hcp/docs/cli/commands/auth/login).
 
-After logging in, configure the CLI to interact with your HCP organization and project. This command will interactively prompt you to select the organization and project.
+After logging in, configure the CLI to interact with your HCP organization and
+project. This command will interactively prompt you to select the organization
+and project.
 
 ```shell-session
 $ hcp profile init
 ```
 
-Once you have selected the HCP organization and project, you can use the HCP CLI to manage the resources for that project. If you want to quickly run a command against a different project, pass the `--project` flag to
-the command.
+Once you have selected the HCP organization and project, you can use the HCP CLI
+to manage the resources for that project. If you want to quickly run a command
+against a different project, pass the `--project` flag to the command.
 
-You have configured the HCP CLI! To verify, retrieve a list of HCP organizations you have access to.
+You have configured the HCP CLI! To verify, retrieve a list of HCP organizations
+you have access to.
 
 ```shell-session
 $ hcp organizations list
